# test-rust-mcu

./: .gitignore  Cargo.toml  memory.x  t.jdebug
src/: main.rs
