[package]
name = "test-rust-mcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "high"]

[profile.release]
    # symbols are nice and they don't increase the size on Flash
    debug = true
    lto = true
    # codegen-units = 1
    opt-level = 0
    # panic = 'abort'
