[package]
name = "test-rust-mcu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0"
nb = "1.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[profile.release]
    # symbols are nice and they don't increase the size on Flash
    debug = true
    lto = true
    # codegen-units = 1
    opt-level = 0
    # panic = 'abort'
